Added reviews
-Movie page: labels, dropdown, textfield, submit and scroll pane with reviews
-Review: made the static id change depending on first or not to fix writing to review.dat
-Added a get user object by username or id
- Changed moviepage constructor to add user